--- a/login.html
+++ b/login.html
@@ -30,9 +30,10 @@
         Login
       </button>
     </div>
-<p class="text-right text-sm text-blue-600 hover:underline mt-2">
-  <a href="forgot_password.html">Forgot password?</a>
-</p>
+
+    <p class="text-right text-sm text-blue-600 hover:underline mt-2">
+      <a href="forgot_password.html">Forgot password?</a>
+    </p>
 
     <p id="errorMsg" class="text-red-500 mt-4 text-center hidden">Invalid credentials</p>
   </div>
@@ -42,7 +43,7 @@
     const email = document.getElementById("email").value.trim();
     const password = document.getElementById("password").value.trim();
 
-    fetch('login.php', {
+    fetch('https://www.tripzetta.com/login.php', {
       method: 'POST',
       headers: {'Content-Type': 'application/x-www-form-urlencoded'},
       body: `email=${encodeURIComponent(email)}&password=${encodeURIComponent(password)}`
@@ -60,8 +61,7 @@
       console.error('Error:', error);
     });
   }
-</script>
+  </script>
 
 </body>
 </html>
-
